// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for BOOLEAN 1`] = `
<InputForBoolean
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "BOOLEAN",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for FLOAT 1`] = `
<InputForNumber
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "FLOAT",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for FORMATTED_TEXT 1`] = `
<InputForFormattedText
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "FORMATTED_TEXT",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for INTEGER 1`] = `
<InputForNumber
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "INTEGER",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for JSON 1`] = `
<InputForJSON
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "JSON",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for LICENSE 1`] = `
<InputForString
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "LICENSE",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for LONG 1`] = `
<InputForNumber
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "LONG",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for PASSWORD 1`] = `
<InputForPassword
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "PASSWORD",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for PROPERTY_SET 1`] = `
<InputForString
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "PROPERTY_SET",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for SINGLE_SELECT_LIST 1`] = `
<Wrapped
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "SINGLE_SELECT_LIST",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for STRING 1`] = `
<InputForString
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "STRING",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;

exports[`should render correctly for TEXT 1`] = `
<InputForText
  isDefault={true}
  name="name"
  onChange={[MockFunction]}
  setting={
    {
      "definition": {
        "category": "foo category",
        "fields": [],
        "key": "foo",
        "options": [],
        "subCategory": "foo subCat",
        "type": "TEXT",
      },
      "hasValue": true,
      "inherited": true,
      "key": "foo",
      "value": "42",
    }
  }
  value={
    [
      "foo",
    ]
  }
/>
`;
